<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingEnd="8dp"
            android:paddingStart="1dp"
            app:title="Detail User"
            app:menu="@menu/top_bar_menu_detail"
            app:navigationIcon="@drawable/ic_arrow_back"
            style="@style/Theme.GitHubUser.ToolBar" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="125dp"
        android:layout_height="125dp"
        tools:src="@mipmap/ic_launcher"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/image_profile_description" />

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/user_fullName_title"
        app:layout_constraintStart_toEndOf="@id/img_profile"
        app:layout_constraintTop_toTopOf="@id/img_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_username"
        android:maxLines="2"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_full_name"
        tools:text="@string/github_title"
        app:layout_constraintTop_toBottomOf="@id/tv_full_name"
        android:layout_marginTop="4dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_followers_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers_title"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintBottom_toTopOf="@id/tv_followers"
        app:layout_constraintEnd_toStartOf="@id/tv_following_title" />

    <TextView
        android:id="@+id/tv_followers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_zero_value"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tv_followers_title"
        app:layout_constraintEnd_toEndOf="@id/tv_followers_title"
        app:layout_constraintBottom_toBottomOf="@id/img_profile" />

    <TextView
        android:id="@+id/tv_following_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following_title"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="@id/tv_followers_title"
        app:layout_constraintStart_toEndOf="@id/tv_followers_title"
        app:layout_constraintEnd_toStartOf="@id/tv_repo_title" />

    <TextView
        android:id="@+id/tv_following"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_zero_value"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tv_following_title"
        app:layout_constraintEnd_toEndOf="@id/tv_following_title"
        app:layout_constraintBottom_toBottomOf="@id/img_profile" />

    <TextView
        android:id="@+id/tv_repo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repo_title"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="@id/tv_followers_title"
        app:layout_constraintStart_toEndOf="@id/tv_following_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tv_repo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_zero_value"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tv_repo_title"
        app:layout_constraintEnd_toEndOf="@id/tv_repo_title"
        app:layout_constraintBottom_toBottomOf="@id/img_profile" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_favorite_border"
        android:contentDescription="@string/fab_icon_description" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_profile"
        app:tabTextColor="?attr/colorPrimary" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>